# tdc-auction-calendar

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml
.claude/skills/: crawl-research.md
.claude/skills/wrap-up/: SKILL.md
.github/workflows/: collect-county-websites.yml  collect-public-notices.yml  collect-state-agencies.yml  collect-statutory.yml  collect-vendors.yml
alembic/: env.py
alembic/versions/: 0cfc343ee649_add_collector_health_table.py  f6fb267a569e_add_vendor_mapping_table.py  fe30a3dade5f_create_initial_tables.py
docs/superpowers/plans/: 2026-03-10-counties-seed-data.md  2026-03-10-states-seed-data.md  2026-03-10-vendor-mapping.md  2026-03-11-issue-8-test-coverage.md  2026-03-11-scraping-infra.md  2026-03-11-statutory-collector.md  2026-03-12-collector-orchestrator.md  2026-03-12-county-website-collector.md  2026-03-13-ical-exporter.md  (+17 more)
src/tdc_auction_calendar/: __init__.py  __main__.py  cli.py  log_config.py
tests/: conftest.py  test_base_collector.py  test_cli.py  test_csv_export.py  test_export_filters.py  test_health_models.py  test_ical_export.py  test_json_export.py  test_models.py  test_orchestrator.py  test_placeholder.py  test_rss_export.py  test_seed_counties.py  test_seed_loader.py  test_seed_states.py  test_seed_vendor_mapping.py  test_statutory_collector.py  test_supabase_sync.py  test_upsert.py
tests/scraping/: conftest.py  test_budget.py  test_cache.py  test_client.py  test_cloudflare.py  test_crawl4ai.py  test_extraction.py  test_json_options.py  test_protocol.py  test_rate_limiter.py
(+128 files in other folders)
